5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1811_2566.log
== TEST (2019-06-13 09:43:04) 
-- CODE:
from numpy import*
faltas=array(eval(input("digite o numero:")))
seg,ter,qua,qui,sex,sab=0,0,0,0,0,0
for i int faltas:
	if(i==2):
		seg=seg+1
	if(i==3):
		ter=ter+1
	if(i==4):
		qua=qua+1
	if(i==5):
		qui=qui+1
	if(i==6):
		sex=sex+1
	if(i==7):
		sab=sab+1
d=zeros(6,dtype=float):
d[0]=round((seg/size(faltas))*100,1)
d[0]=round((ter/size(faltas))*100,1)
d[0]=round((qua/size(faltas))*100,1)
d[0]=round((qui/size(faltas))*100,1)
d[0]=round((sex/size(faltas))*100,1)
d[0]=round((sab/size(faltas))*100,1)
print(d)
-- ERROR:
File "XXXX", line 4
    for i int faltas:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:43:43) 
-- CODE:
from numpy import*
faltas=array(eval(input("digite o numero:")))
seg,ter,qua,qui,sex,sab=0,0,0,0,0,0
for i in faltas:
	if(i==2):
		seg=seg+1
	if(i==3):
		ter=ter+1
	if(i==4):
		qua=qua+1
	if(i==5):
		qui=qui+1
	if(i==6):
		sex=sex+1
	if(i==7):
		sab=sab+1
d=zeros(6,dtype=float):
d[0]=round((seg/size(faltas))*100,1)
d[0]=round((ter/size(faltas))*100,1)
d[0]=round((qua/size(faltas))*100,1)
d[0]=round((qui/size(faltas))*100,1)
d[0]=round((sex/size(faltas))*100,1)
d[0]=round((sab/size(faltas))*100,1)
print(d)
-- ERROR:
File "XXXX", line 17
    d=zeros(6,dtype=float):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:44:09) 
-- CODE:
from numpy import*
faltas=array(eval(input("digite o numero:")))
seg,ter,qua,qui,sex,sab=0,0,0,0,0,0
for i in faltas:
	if(i==2):
		seg=seg+1
	if(i==3):
		ter=ter+1
	if(i==4):
		qua=qua+1
	if(i==5):
		qui=qui+1
	if(i==6):
		sex=sex+1
	if(i==7):
		sab=sab+1
d=zeros(6,dtype=float):
d[0]=round((seg/size(faltas))*100,1)
d[0]=round((ter/size(faltas))*100,1)
d[0]=round((qua/size(faltas))*100,1)
d[0]=round((qui/size(faltas))*100,1)
d[0]=round((sex/size(faltas))*100,1)
d[0]=round((sab/size(faltas))*100,1)
print(d)
-- ERROR:
File "XXXX", line 17
    d=zeros(6,dtype=float):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:44:54) 
-- CODE:
from numpy import*
faltas=array(eval(input("digite o numero:")))
seg,ter,qua,qui,sex,sab=0,0,0,0,0,0
for i in faltas:
	if(i==2):
		seg=seg+1
	if(i==3):
		ter=ter+1
	if(i==4):
		qua=qua+1
	if(i==5):
		qui=qui+1
	if(i==6):
		sex=sex+1
	if(i==7):
		sab=sab+1
d=zeros(6,dtype=float)
d[0]=round((seg/size(faltas))*100,1)
d[0]=round((ter/size(faltas))*100,1)
d[0]=round((qua/size(faltas))*100,1)
d[0]=round((qui/size(faltas))*100,1)
d[0]=round((sex/size(faltas))*100,1)
d[0]=round((sab/size(faltas))*100,1)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:47:01) 
-- CODE:
from numpy import*
faltas=array(eval(input("digite o numero:")))
seg,ter,qua,qui,sex,sab=0,0,0,0,0,0
for i in faltas:
	if(i==2):
		seg=seg+1
	if(i==3):
		ter=ter+1
	if(i==4):
		qua=qua+1
	if(i==5):
		qui=qui+1
	if(i==6):
		sex=sex+1
	if(i==7):
		sab=sab+1
d=zeros(6,dtype=float)
d[0]=round((seg/size(faltas))*100,1)
d[1]=round((ter/size(faltas))*100,1)
d[2]=round((qua/size(faltas))*100,1)
d[3]=round((qui/size(faltas))*100,1)
d[4]=round((sex/size(faltas))*100,1)
d[5]=round((sab/size(faltas))*100,1)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:47:27) 
-- CODE:
from numpy import*
faltas=array(eval(input("digite o numero:")))
seg,ter,qua,qui,sex,sab=0,0,0,0,0,0
for i in faltas:
	if(i==2):
		seg=seg+1
	if(i==3):
		ter=ter+1
	if(i==4):
		qua=qua+1
	if(i==5):
		qui=qui+1
	if(i==6):
		sex=sex+1
	if(i==7):
		sab=sab+1
d=zeros(6,dtype=float)
d[0]=round((seg/size(faltas))*100,1)
d[1]=round((ter/size(faltas))*100,1)
d[2]=round((qua/size(faltas))*100,1)
d[3]=round((qui/size(faltas))*100,1)
d[4]=round((sex/size(faltas))*100,1)
d[5]=round((sab/size(faltas))*100,1)
print(d)
-- EXECUTION TIME:
1.09952
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
